# dscc

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
nginx/: default.conf
shop/: settings.py  test_settings.py  urls.py
store/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_seed_data.py  0003_tag_product_tags.py  0004_seed_tags.py  0005_product_image.py
store/templates/store/: order_create.html  order_detail.html  order_list.html  product_create.html  product_detail.html  product_list.html  register.html
templates/: base.html
templates/registration/: login.html
